--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/node": "^12.20.24",
     "@types/react": "^17.0.20",
     "@types/vscode": "^1.59.0",
+    "@types/webpack-env": "^1.16.2",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "eslint": "^7.19.0",
